Fixed nav link spacing

--- a/css/index.css
+++ b/css/index.css
@@ -82,17 +82,23 @@ p {
 .navTop{
     display:flex;
     align-items:baseline;
+    border: 2px solid black;
+
 }
 
-/* need to fix links to space and look without underline */
+.logo{
+
+}
 .links{
     display:flex;
-    
     justify-content:space-evenly;
     border: 3px solid black;
+    width:50vw;
 }
 .links a{
     border: 3px solid black;
+    text-decoration: none;
+    color:black;
 }
 
 header img{
